# online_programming_school

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  utils.py
api/: urls.py
config/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
course_materials/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
course_materials/migrations/: 0001_initial.py  0002_initial.py  0003_alter_module_options_alter_course_image_and_more.py
course_materials/tests/: test_serializers.py  test_tasks.py  test_validators.py  test_views.py
frontend_react/frontend/: Dockerfile  package-lock.json
materials/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_module.py  0003_lesson.py  0003_module_update_date_lesson.py  0004_alter_lesson_link.py  0004_module_update_date.py
materials/tests/: test_serializers.py  test_tasks.py  test_validators.py  test_views.py
payments/: admin.py  models.py  permissions.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_initial.py  0002_subscribe.py
payments/tests/: test_serializers.py  test_services.py  test_views.py
search_engine/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
users/: models.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
(+54 files in other folders)
